load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
    "import_library",
)

load("defs.bzl",
    "netcoreapp_ref_assembly",
    "netcoreapp_impl_assembly",
    "ref_impl_pair",
    "LIVE_REFPACK_DEPS")

nowarn = [ "CS8500", "CS8969" ]

ref_assembly_nowarns = [
    # Ref assemblies use 'throw null'
    "CS8597",
    # Fields are unused
    "CS0169", "CS0649", "CS8618",
    # Fields are not assigned in ctors
    "CS8618",
    # Call base constructors with null literals
    "CS8625"
]

filegroup(
    name = "impl_netcoreapp",
    srcs = [
        "//src/libraries/shims/mscorlib:impl_mscorlib",
        ":impl_Microsoft.Win32.Primitives",
        "//src/coreclr/System.Private.CoreLib:impl_System.Private.CoreLib",
        ":impl_System.Runtime",
        "//src/libraries/System.Runtime.Loader:impl_System.Runtime.Loader",
        ":impl_System.Diagnostics.Process",
        ":impl_System.ComponentModel.Primitives",
        ":impl_System.Console",
        "//src/libraries/System.Collections:impl_System.Collections",
        ":impl_System.Linq",
        "//src/libraries/System.Memory:impl_System.Memory",
        "//src/libraries/System.Numerics.Vectors:impl_System.Numerics.Vectors",
        "//src/libraries/System.Runtime.Intrinsics:impl_System.Runtime.Intrinsics",
        ":impl_System.Threading",
        "//src/libraries/System.Runtime.InteropServices:impl_System.Runtime.InteropServices",
    ],
    visibility = ["//visibility:public"],
)

ref_impl_pair(
    name = "live_System.Runtime",
    ref = ":ref_System.Runtime",
    lib = ":impl_System.Runtime",
    visibility = ["//visibility:public"],
)

ref_impl_pair(
    name = "live_System.Console",
    ref = ":ref_System.Console",
    lib = ":impl_System.Console",
    visibility = ["//visibility:public"],
)

netcoreapp_ref_assembly(
    name = "ref_System.Private.CoreLib",
    srcs = [
        "Microsoft.Win32.Primitives/ref/Microsoft.Win32.Primitives.cs",
        "//src/libraries/System.Diagnostics.Contracts:ref/System.Diagnostics.Contracts.cs",
        "//src/libraries/System.Diagnostics.Contracts:ref/System.Diagnostics.Tracing.cs",
        "//src/libraries/System.Diagnostics.Contracts:ref/System.Diagnostics.Tracing.Counters.cs",
        "//src/libraries/System.Numerics.Vectors:ref/System.Numerics.Vectors.cs",
        "//src/libraries/System.Reflection.Emit.ILGeneration:ref/System.Reflection.Emit.ILGeneration.cs",
        "//src/libraries/System.Reflection.Emit.Lightweight:ref/System.Reflection.Emit.Lightweight.cs",
        "//src/libraries/System.Reflection.Emit:ref/System.Reflection.Emit.cs",
        "//src/libraries/System.Reflection.Primitives:ref/System.Reflection.Primitives.cs",
        "//src/libraries/System.Runtime.Intrinsics:ref/System.Runtime.Intrinsics.cs",
        "//src/libraries/System.Runtime.Loader:ref/System.Runtime.Loader.cs",
        "System.Runtime/ref/System.Runtime.cs",
        "//src/libraries/System.Text.Encoding.Extensions:ref/System.Text.Encoding.Extensions.cs",
        "//src/libraries/System.Threading.Overlapped:ref/System.Threading.Overlapped.cs",
        "//src/libraries/System.Threading.ThreadPool:ref/System.Threading.ThreadPool.cs",
        "//src/libraries/System.Threading.Thread:ref/System.Threading.Thread.cs",

        # contracts where types were partially moved to CoreLib, these are used both here and in the contract assemblies and are generated -->
        "System.Collections.Concurrent/ref/System.Collections.Concurrent.cs",
        "//src/libraries/System.Collections:ref/System.Collections.cs",
        "//src/libraries/System.Diagnostics.StackTrace:ref/System.Diagnostics.StackTrace.cs",
        "//src/libraries/System.Memory:ref/System.Memory.cs",
        "//src/libraries/System.Runtime.InteropServices:ref/System.Runtime.InteropServices.cs",
        "//src/libraries/System.Threading:ref/System.Threading.cs",

        # types only exposed through CoreLib, this is manually maintained -->
        "//src/libraries/System.Private.CoreLib:ref/System.Private.CoreLib.ExtraApis.cs",

        # types not exposed in contracts but forwarded from the mscorlib shim, this is manually maintained -->
        "//src/libraries/System.Private.CoreLib:ref/System.Private.CoreLib.ManualShimTypeForwards.cs",
    ],
    allow_unsafe_blocks = True,
    defines = ["BUILDING_CORELIB_REFERENCE"],
    compiler_options = [
        "/runtimemetadataversion:v4.0.30319",
        "/checksumalgorithm:SHA256",
        "/publicsign+",
    ],
    nowarn = nowarn + ref_assembly_nowarns + [
        # disable warnings about obsolete APIs,
        # Remove warning disable when nullable attributes are respected,
        # Type has no accessible constructors which use only CLS-compliant types
        "CS0809", "CS0618", "CS8614", "CS3015"
    ],
)

netcoreapp_ref_assembly(
    name = "ref_System.Runtime",
    srcs = [
        "System.Runtime/ref/System.Runtime.cs",
    ],
    compiler_options = [
        "/runtimemetadataversion:v4.0.30319",
    ],
    allow_unsafe_blocks = True,
    nowarn = [ "CS0169", "CS0809", "CS0618", "CS3015" ]
)

netcoreapp_ref_assembly(
    name = "ref_System.IO.Pipes",
    srcs = [
        "System.IO.Pipes/ref/System.IO.Pipes.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_ref_assembly(
    name = "ref_Microsoft.Win32.Primitives",
    srcs = [
        "Microsoft.Win32.Primitives/ref/Microsoft.Win32.Primitives.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_impl_assembly(
    name = "impl_Microsoft.Win32.Primitives",
    deps = [
        "//src/coreclr/System.Private.CoreLib:impl_System.Private.CoreLib",
    ],
    generate_facades = True,
    facade_contract_assembly = ":ref_Microsoft.Win32.Primitives",
    exclude_sr = True,
)

ref_impl_pair(
    name = "live_Microsoft.Win32.Primitives",
    ref = ":ref_Microsoft.Win32.Primitives",
    lib = ":impl_Microsoft.Win32.Primitives",
    visibility = [ "//visibility:public" ],
)

netcoreapp_ref_assembly(
    name = "ref_System.Threading",
    srcs = [
        "System.Threading/ref/System.Threading.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_impl_assembly(
    name = "impl_System.Threading",
    srcs = [
        "System.Threading/src/System/Threading/Barrier.cs",
        "System.Threading/src/System/Threading/CDSsyncETWBCLProvider.cs",
        "System.Threading/src/System/Threading/CountdownEvent.cs",
        "System.Threading/src/System/Threading/HostExecutionContext.cs",
        "System.Threading/src/System/Threading/HostExecutionContextManager.cs",
        "System.Threading/src/System/Threading/LockCookie.cs",
        "System.Threading/src/System/Threading/ReaderWriterLock.cs",

        "//src/libraries/Common:src/System/HResults.cs",
        "//src/libraries/Common:src/System/Obsoletions.cs",
    ],
    deps = [
        ":ref_System.Private.CoreLib",
    ],
    resx_file = "System.Threading/src/Resources/Strings.resx",
    allow_unsafe_blocks = True,
    generate_facades = True,
    facade_contract_assembly = ":ref_System.Threading",
)

ref_impl_pair(
    name = "live_System.Threading",
    ref = ":ref_System.Threading",
    lib = ":impl_System.Threading",
    visibility = [ "//visibility:public" ],
)

netcoreapp_ref_assembly(
    name = "ref_System.Console",
    srcs = [
        "System.Console/ref/System.Console.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_ref_assembly(
    name = "ref_System.Collections.Concurrent",
    srcs = [
        "System.Collections.Concurrent/ref/System.Collections.Concurrent.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_ref_assembly(
    name = "ref_System.Collections.NonGeneric",
    srcs = [
        "System.Collections.NonGeneric/ref/System.Collections.NonGeneric.cs",
        "System.Collections.NonGeneric/ref/System.Collections.NonGeneric.Forwards.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_ref_assembly(
    name = "ref_System.ComponentModel",
    srcs = [
        "System.ComponentModel/ref/System.ComponentModel.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_ref_assembly(
    name = "ref_System.Diagnostics.FileVersionInfo",
    srcs = [
        "System.Diagnostics.FileVersionInfo/ref/System.Diagnostics.FileVersionInfo.cs",
    ],
    deps = [
        ":ref_System.Runtime",
    ],
)

netcoreapp_ref_assembly(
    name = "ref_System.ComponentModel.Primitives",
    srcs = [
        "System.ComponentModel.Primitives/ref/System.ComponentModel.Primitives.cs",
    ],
    deps = [
        ":ref_System.Runtime",
        ":ref_System.ObjectModel",
        ":ref_System.Collections.NonGeneric",
        ":ref_System.ComponentModel",
    ],
)

netcoreapp_ref_assembly(
    name = "ref_System.Collections.Specialized",
    srcs = [
        "System.Collections.Specialized/ref/System.Collections.Specialized.cs",
    ],
    deps = [
        ":ref_System.Runtime",
        ":ref_System.ComponentModel.Primitives",
    ],
)

netcoreapp_ref_assembly(
    name = "ref_System.Diagnostics.Process",
    srcs = [
        "System.Diagnostics.Process/ref/System.Diagnostics.Process.cs",
    ],
    deps = [
        ":ref_System.Runtime",
        "//src/libraries/System.Runtime.InteropServices:ref_System.Runtime.InteropServices",
        ":ref_System.ComponentModel.Primitives",
        ":ref_System.Collections.Specialized",
        ":ref_System.Collections.NonGeneric",
        ":ref_System.Diagnostics.FileVersionInfo",
    ],
)

netcoreapp_impl_assembly(
    name = "impl_System.Private.Uri",
    srcs = [
        "//src/libraries/Common:src/System/Collections/Generic/ArrayBuilder.cs",
        "//src/libraries/Common:src/System/HexConverter.cs",
        "//src/libraries/Common:src/System/Obsoletions.cs",
        "//src/libraries/Common:src/System/Net/IPv4AddressHelper.Common.cs",
        "//src/libraries/Common:src/System/Net/IPv6AddressHelper.Common.cs",
        "//src/libraries/Common:src/System/Text/ValueStringBuilder.cs",

        "System.Private.Uri/src/System/DomainNameHelper.cs",
        "System.Private.Uri/src/System/GenericUriParser.cs",
        "System.Private.Uri/src/System/IPv4AddressHelper.cs",
        "System.Private.Uri/src/System/IPv6AddressHelper.cs",
        "System.Private.Uri/src/System/IriHelper.cs",
        "System.Private.Uri/src/System/PercentEncodingHelper.cs",
        "System.Private.Uri/src/System/UncNameHelper.cs",
        "System.Private.Uri/src/System/Uri.cs",
        "System.Private.Uri/src/System/UriBuilder.cs",
        "System.Private.Uri/src/System/UriCreationOptions.cs",
        "System.Private.Uri/src/System/UriEnumTypes.cs",
        "System.Private.Uri/src/System/UriExt.cs",
        "System.Private.Uri/src/System/UriFormatException.cs",
        "System.Private.Uri/src/System/UriHelper.cs",
        "System.Private.Uri/src/System/UriHostNameType.cs",
        "System.Private.Uri/src/System/UriParserTemplates.cs",
        "System.Private.Uri/src/System/UriPartial.cs",
        "System.Private.Uri/src/System/UriScheme.cs",
        "System.Private.Uri/src/System/UriSyntax.cs",
        "System.Private.Uri/src/System/ValueStringBuilderExtensions.cs",

        "System.Private.Uri/System.SR.cs",
    ],
    deps = [
        ":ref_System.Private.CoreLib",
    ],
    allow_unsafe_blocks = True,
)

netcoreapp_impl_assembly(
    name = "impl_System.Runtime",
    srcs = [
        "System.Runtime/src/System.Runtime.Typeforwards.cs",
    ],
    deps = [
        ":ref_System.Private.CoreLib",
        ":impl_System.Private.Uri",
    ],
    generate_facades = True,
    facade_contract_assembly = ":ref_System.Runtime",
    facade_omit_types = [
        "System.Void",
    ],
    exclude_sr = True,
)

netcoreapp_impl_assembly(
    name = "impl_System.Diagnostics.Process",
    analyzers = [
        "//src/libraries/System.Runtime.InteropServices:LibraryImportGenerator",
        "//src/libraries/System.Runtime.InteropServices:Microsoft.Interop.SourceGeneration",
    ],
    srcs = [
        "System.Diagnostics.Process/src/Microsoft/Win32/SafeHandles/SafeProcessHandle.cs",
        "System.Diagnostics.Process/src/System/Collections/Specialized/DictionaryWrapper.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/AsyncStreamReader.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/DataReceivedEventArgs.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/Process.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ProcessInfo.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ProcessManager.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ProcessModule.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ProcessModuleCollection.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ProcessPriorityClass.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ProcessStartInfo.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ProcessThread.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ProcessThreadCollection.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ProcessWindowStyle.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ThreadInfo.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ThreadPriorityLevel.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ThreadState.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/ThreadWaitReason.cs",
        "System.Diagnostics.Process/src/System/Diagnostics/MonitoringDescriptionAttribute.cs",
        "System.Diagnostics.Process/src/System/Collections/Specialized/StringDictionaryWrapper.cs",

        "//src/libraries/System.Private.CoreLib/src:System/PasteArguments.cs",

        "//src/libraries/Common:src/DisableRuntimeMarshalling.cs",
        "//src/libraries/Common:src/System/Runtime/Serialization/SerializationGuard.cs",
        "//src/libraries/Common:src/Interop/Windows/Interop.Errors.cs",
        "//src/libraries/Common:src/System/Text/ValueStringBuilder.cs",
        "//src/libraries/Common:src/System/Collections/Generic/ArrayBuilder.cs",
    ] + select({
        "@platforms//os:linux": [
            "System.Diagnostics.Process/src/Microsoft/Win32/SafeHandles/SafeProcessHandle.Unix.cs",
            "System.Diagnostics.Process/src/System/Diagnostics/Process.Unix.cs",
            "System.Diagnostics.Process/src/System/Diagnostics/ProcessManager.Unix.cs",
            "System.Diagnostics.Process/src/System/Diagnostics/ProcessThread.Unix.cs",
            "System.Diagnostics.Process/src/System/Diagnostics/ProcessStartInfo.Unix.cs",
            "System.Diagnostics.Process/src/System/Diagnostics/ProcessWaitHandle.Unix.cs",
            "System.Diagnostics.Process/src/System/Diagnostics/ProcessWaitState.Unix.cs",

            "//src/libraries/Common:src/System/IO/StringParser.cs",
            "//src/libraries/Common:src/Interop/Unix/Interop.Libraries.cs",
            "//src/libraries/Common:src/Interop/Unix/Interop.Errors.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Close.cs",
            "//src/libraries/Common:src/Interop/Unix/Interop.DefaultPathBufferSize.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetHostName.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.SysConf.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.ForkAndExecProcess.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetGroupList.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetPwUid.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetSetPriority.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetSid.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.InitializeTerminalAndSignalHandling.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Kill.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.ReadLink.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.RegisterForSigChld.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.SetDelayedSigChildConsoleConfigurationHandler.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.ResourceLimits.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.PathConf.cs",
            "//src/libraries/Common:src/System/Text/ValueUtf8Converter.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.WaitId.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.WaitPid.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Access.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Stat.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetEUid.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.IsMemberOfGroup.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.ConfigureTerminalForChildProcess.cs",

            "System.Diagnostics.Process/src/System/Diagnostics/Process.ConfigureTerminalForChildProcesses.Unix.cs",
            "System.Diagnostics.Process/src/System/Diagnostics/Process.Linux.cs",
            "System.Diagnostics.Process/src/System/Diagnostics/ProcessManager.Linux.cs",
            "System.Diagnostics.Process/src/System/Diagnostics/ProcessThread.Linux.cs",

            "//src/libraries/Common:src/Interop/Linux/cgroups/Interop.cgroups.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.MountPoints.FormatInfo.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.UnixFileSystemTypes.cs",
            "//src/libraries/Common:src/Interop/Linux/procfs/Interop.ProcFsStat.cs",
            "//src/libraries/Common:src/Interop/Linux/procfs/Interop.ProcFsStat.ParseMapModules.cs",
            "//src/libraries/Common:src/Interop/Linux/procfs/Interop.ProcFsStat.TryReadStatusFile.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetBootTimeTicks.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.SchedGetSetAffinity.cs",

            "System.Diagnostics.Process/src/System/Diagnostics/Process.NonUap.cs",
        ],
    }),
    resx_file = "System.Diagnostics.Process/src/Resources/Strings.resx",
    deps = [
        ":ref_Microsoft.Win32.Primitives",
#        ":ref_Microsoft.Win32.Registry",
        "//src/libraries/System.Collections:ref_System.Collections",
#        ":ref_System.Collections.Concurrent",
        ":ref_System.Collections.NonGeneric",
        ":ref_System.Collections.Specialized",
        ":ref_System.ComponentModel.Primitives",
        ":ref_System.Diagnostics.FileVersionInfo",
        ":ref_System.IO.FileSystem.DriveInfo",
        "//src/libraries/System.Memory:ref_System.Memory",
        ":ref_System.IO.Pipes",
        ":ref_System.Runtime",
        "//src/libraries/System.Runtime.InteropServices:ref_System.Runtime.InteropServices",
#        ":ref_System.Text.Encoding.Extensions",
        ":ref_System.Threading",
#        ":ref_System.Threading.Thread",
        ":ref_System.Threading.ThreadPool",
    ],
    allow_unsafe_blocks = True,
)

netcoreapp_impl_assembly(
    name = "impl_System.ComponentModel.Primitives",
    srcs = [
        "System.ComponentModel.Primitives/src/System/ComponentModel/ISynchronizeInvoke.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/BrowsableAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/CategoryAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/Component.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/ComponentCollection.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/DescriptionAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/DesignerAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/DesignerCategoryAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/DesignerSerializationVisibility.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/DesignerSerializationVisibilityAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/DesignOnlyAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/Design/Serialization/DesignerSerializerAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/DisplayNameAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/EditorAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/EventHandlerList.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/IComponent.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/IContainer.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/ImmutableObjectAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/InitializationEventAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/InvalidAsynchronousStateException.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/InvalidEnumArgumentException.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/ISite.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/ISupportInitialize.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/LocalizableAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/MergablePropertyAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/NotifyParentPropertyAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/ParenthesizePropertyNameAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/ReadOnlyAttribute.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/RefreshProperties.cs",
        "System.ComponentModel.Primitives/src/System/ComponentModel/RefreshPropertiesAttribute.cs",

        "//src/libraries/Common:src/System/Obsoletions.cs",
    ],
    deps = [
        ":ref_System.Collections.NonGeneric",
        ":ref_System.ComponentModel",
        ":ref_System.ObjectModel",
        ":ref_System.Runtime",
        ":ref_System.Threading",
    ],
    resx_file = "System.ComponentModel.Primitives/src/Resources/Strings.resx",
)

netcoreapp_impl_assembly(
    name = "impl_System.Console",
    analyzers = [
        "//src/libraries/System.Runtime.InteropServices:LibraryImportGenerator",
        "//src/libraries/System.Runtime.InteropServices:Microsoft.Interop.SourceGeneration",
    ],
    srcs = [
        "System.Console/src/System/Console.cs",
        "System.Console/src/System/ConsoleCancelEventArgs.cs",
        "System.Console/src/System/ConsoleColor.cs",
        "System.Console/src/System/ConsoleSpecialKey.cs",
        "System.Console/src/System/ConsoleKey.cs",
        "System.Console/src/System/ConsoleKeyInfo.cs",
        "System.Console/src/System/ConsoleModifiers.cs",
        "System.Console/src/System/IO/ConsoleStream.cs",
        "System.Console/src/System/IO/CachedConsoleStream.cs",
        "System.Console/src/System/IO/SyncTextReader.cs",
        "System.Console/src/System/IO/Error.cs",

        "//src/libraries/Common:src/DisableRuntimeMarshalling.cs",
        "//src/libraries/Common:src/System/Text/ConsoleEncoding.cs",
        "//src/libraries/Common:src/System/Text/ValueStringBuilder.cs",
        "//src/libraries/Common:src/System/Text/ValueStringBuilder.AppendSpanFormattable.cs",
    ] + select({
        "@platforms//os:linux": [
            "System.Console/src/System/ConsolePal.Unix.cs",
            "System.Console/src/System/ConsolePal.Unix.ConsoleStream.cs",
            "System.Console/src/System/TerminalFormatStrings.cs",
            "System.Console/src/System/TermInfo.cs",
            "System.Console/src/System/TermInfo.WellKnownStrings.cs",
            "System.Console/src/System/TermInfo.Database.cs",
            "System.Console/src/System/TermInfo.DatabaseFactory.cs",
            "System.Console/src/System/TermInfo.WellKnownNumbers.cs",
            "System.Console/src/System/IO/StdInReader.cs",
            "System.Console/src/System/IO/SyncTextReader.Unix.cs",
            "System.Console/src/System/IO/KeyParser.cs",

            "//src/libraries/System.Private.CoreLib/src:System/IO/PersistedFiles.Unix.cs",
            "//src/libraries/System.Private.CoreLib/src:System/IO/PersistedFiles.Names.Unix.cs",

            "//src/libraries/Common:src/System/Console/ConsoleUtils.cs",
            "//src/libraries/Common:src/System/Text/EncodingHelper.Unix.cs",
            "//src/libraries/Common:src/Interop/Unix/Interop.Libraries.cs",
            "//src/libraries/Common:src/Interop/Unix/Interop.Errors.cs",
            "//src/libraries/Common:src/Interop/Unix/Interop.IOErrors.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Close.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Dup.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.FileDescriptors.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.FLock.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetControlCharacters.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.IsATty.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Open.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.OpenFlags.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Poll.cs",
            "//src/libraries/Common:src/Interop/Unix/Interop.Poll.Structs.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetEUid.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetPwUid.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.SetTerminalInvalidationHandler.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.SetSignalForBreak.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.SNPrintF.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Stat.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Read.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.Write.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.GetWindowWidth.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.InitializeTerminalAndSignalHandling.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.ReadStdinUnbuffered.cs",
            "//src/libraries/Common:src/Interop/Unix/System.Native/Interop.StdinReady.cs",
        ]
    }),
    deps = [
        "//src/libraries/System.Collections:ref_System.Collections",
        "//src/libraries/System.Memory:ref_System.Memory",
        ":ref_System.Runtime",
        "//src/libraries/System.Runtime.InteropServices:ref_System.Runtime.InteropServices",
#        ":ref_System.Text.Encoding.Extensions",
        ":live_System.Threading",
        ":ref_Microsoft.Win32.Primitives",
    ],
    resx_file = "System.Console/src/Resources/Strings.resx",
    allow_unsafe_blocks = True,
)

netcoreapp_impl_assembly(
    name = "impl_System.Linq",
    srcs = [
        "System.Linq/src/System/Linq/AppendPrepend.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Cast.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Concat.SpeedOpt.cs",
        "System.Linq/src/System/Linq/DefaultIfEmpty.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Distinct.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Grouping.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Iterator.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Lookup.SpeedOpt.cs",
        "System.Linq/src/System/Linq/OfType.SpeedOpt.cs",
        "System.Linq/src/System/Linq/OrderedEnumerable.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Range.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Repeat.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Reverse.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Select.SpeedOpt.cs",
        "System.Linq/src/System/Linq/SelectMany.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Skip.SpeedOpt.cs",
        "System.Linq/src/System/Linq/SkipTake.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Take.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Union.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Where.SpeedOpt.cs",
        "System.Linq/src/System/Linq/Aggregate.cs",
        "System.Linq/src/System/Linq/AnyAll.cs",
        "System.Linq/src/System/Linq/AppendPrepend.cs",
        "System.Linq/src/System/Linq/Average.cs",
        "System.Linq/src/System/Linq/Cast.cs",
        "System.Linq/src/System/Linq/Chunk.cs",
        "System.Linq/src/System/Linq/Concat.cs",
        "System.Linq/src/System/Linq/Contains.cs",
        "System.Linq/src/System/Linq/AggregateBy.cs",
        "System.Linq/src/System/Linq/CountBy.cs",
        "System.Linq/src/System/Linq/Count.cs",
        "System.Linq/src/System/Linq/DebugView.cs",
        "System.Linq/src/System/Linq/DefaultIfEmpty.cs",
        "System.Linq/src/System/Linq/Distinct.cs",
        "System.Linq/src/System/Linq/ElementAt.cs",
        "System.Linq/src/System/Linq/Enumerable.cs",
        "System.Linq/src/System/Linq/Except.cs",
        "System.Linq/src/System/Linq/First.cs",
        "System.Linq/src/System/Linq/Grouping.cs",
        "System.Linq/src/System/Linq/GroupJoin.cs",
        "System.Linq/src/System/Linq/Index.cs",
        "System.Linq/src/System/Linq/Intersect.cs",
        "System.Linq/src/System/Linq/Iterator.cs",
        "System.Linq/src/System/Linq/Join.cs",
        "System.Linq/src/System/Linq/Last.cs",
        "System.Linq/src/System/Linq/Lookup.cs",
        "System.Linq/src/System/Linq/Max.cs",
        "System.Linq/src/System/Linq/MaxMin.cs",
        "System.Linq/src/System/Linq/Min.cs",
        "System.Linq/src/System/Linq/OfType.cs",
        "System.Linq/src/System/Linq/OrderBy.cs",
        "System.Linq/src/System/Linq/OrderedEnumerable.cs",
        "System.Linq/src/System/Linq/PartialArrayEnumerator.cs",
        "System.Linq/src/System/Linq/Range.cs",
        "System.Linq/src/System/Linq/Repeat.cs",
        "System.Linq/src/System/Linq/Reverse.cs",
        "System.Linq/src/System/Linq/SegmentedArrayBuilder.cs",
        "System.Linq/src/System/Linq/Select.cs",
        "System.Linq/src/System/Linq/SelectMany.cs",
        "System.Linq/src/System/Linq/SequenceEqual.cs",
        "System.Linq/src/System/Linq/Single.cs",
        "System.Linq/src/System/Linq/SingleLinkedNode.cs",
        "System.Linq/src/System/Linq/Skip.cs",
        "System.Linq/src/System/Linq/Sum.cs",
        "System.Linq/src/System/Linq/Take.cs",
        "System.Linq/src/System/Linq/ThrowHelper.cs",
        "System.Linq/src/System/Linq/ToCollection.cs",
        "System.Linq/src/System/Linq/Union.cs",
        "System.Linq/src/System/Linq/Utilities.cs",
        "System.Linq/src/System/Linq/Where.cs",
        "System.Linq/src/System/Linq/Zip.cs",
    ],
    deps = [
        "//src/libraries/System.Collections:ref_System.Collections",
        "//src/libraries/System.Memory:ref_System.Memory",
        "//src/libraries/System.Numerics.Vectors:ref_System.Numerics.Vectors",
        ":ref_System.Runtime",
        "//src/libraries/System.Runtime.InteropServices:ref_System.Runtime.InteropServices",
        "//src/libraries/System.Runtime.Intrinsics:ref_System.Runtime.Intrinsics",
    ],
    resx_file = "System.Linq/src/Resources/Strings.resx",
)