load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "csharp_library",
    "csharp_nunit_test",
)

load(
    "//:defs.bzl",
    "NETCOREAPP_TOOL_CURRENT",
    "LIVE_REFPACK_DEPS",
)

load("defs.bzl", "live_csharp_binary")

csharp_binary(
    name = "instance_assignment_class01",
    srcs = [
        "JIT/Generics/Locals/instance_assignment_class01.cs",
    ],
    deps = [
        "//:TargetingPack"
    ],
    target_frameworks = [ "net8.0" ]
)

csharp_library(
    allow_unsafe_blocks = True,
    name = "UnsafeAccessorsTests",
    srcs = [
        "baseservices/compilerservices/UnsafeAccessors/UnsafeAccessorsTests.cs",
        "baseservices/compilerservices/UnsafeAccessors/UnsafeAccessorsTests.Generics.cs",
    ],
    deps = [
        "//:TargetingPack",
        "//src/tests:CoreCLRTestLibrary",
        "//src/libraries:ref_System.Runtime",
    ],
    disable_implicit_framework_refs = True,
    target_frameworks = [ "net9.0" ],
)

csharp_library(
    name = "CoreCLRTestLibrary",
    allow_unsafe_blocks = True,
    cls_compliant = False,
    nowarn = [ "CS1574", "CS1572", ],
    nullable = "annotations",
    srcs = [
        "Common/CoreCLRTestLibrary/AssertExtensions.cs",
        "Common/CoreCLRTestLibrary/Generator.cs",
        "Common/CoreCLRTestLibrary/Logging.cs",
        "Common/CoreCLRTestLibrary/TestFramework.cs",
        "Common/CoreCLRTestLibrary/Utilities.cs",
        "Common/CoreCLRTestLibrary/HostPolicyMock.cs",
        "Common/CoreCLRTestLibrary/XPlatformUtils.cs",
        "Common/CoreCLRTestLibrary/CoreClrConfigurationDetection.cs",
        "Common/CoreCLRTestLibrary/OutOfProcessTest.cs",
        "Common/CoreCLRTestLibrary/PlatformDetection.cs",
        "Common/Coreclr.TestWrapper/CoreclrTestWrapperLib.cs",
        "Common/Coreclr.TestWrapper/MobileAppHandler.cs",
    ],
    deps = [
        "//:TargetingPack",
    ],
    target_frameworks = [ "net9.0"],
)

live_csharp_binary(
    name = "DwarfDumpTest",
    srcs = [
        "nativeaot/SmokeTests/DwarfDump/Program.cs",
    ],
    deps = LIVE_REFPACK_DEPS,
    target_frameworks = [ NETCOREAPP_TOOL_CURRENT ]
)